# fteepee

./: Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
examples/: Cargo.toml  sync.rs  tokio.rs
fteepee-core/: Cargo.toml
fteepee-core/src/: code.rs  commands.rs  error.rs  lib.rs  parsers.rs  response.rs
fteepee-core/testdata/: double_command_input  double_command_output  feat_command_input  feat_command_output  individual_command_input  individual_command_output  welcome_message_input  welcome_message_output
fteepee-sync/: Cargo.toml
fteepee-sync/src/: lib.rs
fteepee-sync/tests/: lib.rs
fteepee-tokio/: Cargo.toml
fteepee-tokio/src/: lib.rs
