[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
fteepee-sync = { path = "../fteepee-sync" }
fteepee-tokio = { path = "../fteepee-tokio" }
tokio = { version = "1", features = ["full"] }

[[example]]
name = "sync"
path = "sync.rs"

[[example]]
name = "tokio"
path = "tokio.rs"
