[package]
name = "fteepee-sync"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = { version = "1", default-features = false }
fteepee-core = { path = "../fteepee-core", features = ["std"] }
log = "0.4"

[dev-dependencies]
testcontainers = { version = "0.14.0", default-features = false }
