[package]
name = "fteepee-tokio"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = { version = "1", default-features = false }
fteepee-core = { path = "../fteepee-core", features = ["std"] }
tokio = { version = "1", features = ["io-util", "net"] }
tracing = { version = "0.1.37", default-features = false, features = ["std", "log"] }
